# MFSindy

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: docs.yml  mkdocs-deploy.yml
Paper/: main.aux  main.fdb_latexmk  main.fls  main.tex
code/utils/: part1.py  plot.py  training.py
docs/: README.md  api.md  contributing.md  examples.md  index.md  methodology.md
docs/ci/: check_docs.py
docs/notebooks/isothermal_flow/: itflow.ipynb
docs/notebooks/lorenz/: forecastingMF.ipynb
examples/GLS/: base.ipynb
examples/GLS/Burgers/: part1.py  part2.py  utils.py
examples/GLS/DoublePendulum/: double_pendulum.ipynb  main.py  pendulum_utils.py
examples/GLS/Hopf/: hopf.ipynb  part1.py  part2.py  plot_utils.py  utils.py
examples/GLS/Isothermal-Flow/: itflow.py  ns_isothermal_utils.py  part1.py  part2.py
examples/GLS/Lorenz/: forecastingDoublePendulum.ipynb  part1.py  (+2 more)
examples/archive/: hopf_script.py
examples/base/: part1.ipynb  part2.ipynb  utils.py
examples/burgers/: part1.ipynb  part2.ipynb  utils.py
examples/hopf/: part1.ipynb  part2.ipynb  utils.py
examples/isothermal_flow/: part1.ipynb  part2.ipynb  utils.py
examples/lorenz/: part1.ipynb  part2.ipynb  utils.py
examples/pendulum/: part1.ipynb  part2.ipynb  utils.py
presentations/: Agenda.md  gls_animation.py  intro.ipynb  intro_manim.py  methodology.ipynb  vorticity.py  vorticity_signals_manim.py
presentations/movs/: etero_schedastic_noise.py  linear_pendulum_noise.py  lorenz.py  sindy_slide.py  weak_sindy_slide.py  weighted_weak_sindy.py
src/mfsindy/: __init__.py  mf_pipeline.py  plots.py  training.py  weighted_weak_pde_library.py
videos/: README.md
videos/scripts/: scene1.py
(+52 files in other folders)
