[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mfsindy"
version = "0.1.0"
description = "Weighted weak-form SINDy utilities, experiments, and reproducible assets."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Filippo Zacchei" }
]
keywords = ["sindy", "system-identification", "pde", "multi-fidelity", "weak-form"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research"
]
dependencies = [
  "matplotlib==3.10.3",
  "numpy==2.2.6",
  "pandas==2.3.0",
  "pillow==11.3.0",
  "pysindy @ git+https://github.com/filippozacchei/pysindy.git",
  "scikit-learn==1.7.0",
  "scipy==1.15.3",
  "tqdm==4.67.1"
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29",
  "jupyterlab>=4.1",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "black>=24.2",
  "nox>=2024.3.2",
  "pre-commit>=3.7.0",
  "pytest>=8.1",
  "ruff>=0.4.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "examples", "docs"]
extend-exclude = ["OLD", "videos", "paper", "presentations/media"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "NPY", "PTH", "RUF"]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["E402"]
"examples/**" = ["E402"]
